add welcome, auth pages, layout for welcom page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "workbench.settings.openDefaultKeybindings": true,
-  "editor.fontFamily": "Daddy Tima Mono, monospace",
-  "editor.fontSize": 18
+  "editor.fontFamily": "Daddy Tima Mono",
+  "editor.fontSize": 16,
+  "editor.fontLigatures": false
 }
