add register, refactoring structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.settings.openDefaultKeybindings": true,
-  "editor.fontFamily": "Daddy Tima Mono",
+  "editor.fontFamily": "DaddyTimeMono Nerd Font",
   "editor.fontSize": 16,
   "editor.fontLigatures": false
 }
